--- a/dev_market2.html
+++ b/dev_market2.html
@@ -20,6 +20,7 @@
     <script type="text/javascript" src="js/lib/obentomarket-core.js"></script>
     <script type="text/javascript" src="./store1_market2.js"></script>
     <script type="text/javascript" src="./store2_market2.js"></script>
+    <script type="text/javascript" src="./store3_market2.js"></script>
 </head>
 <body>
 
