--- a/dev_market2.html
+++ b/dev_market2.html
@@ -18,7 +18,7 @@
     <script type="text/javascript" src="js/lib/jquery.js"></script>
     <script type="text/javascript" src="js/lib/underscore.js"></script>
     <script type="text/javascript" src="js/lib/obentomarket-core.js"></script>
-<script type="text/javascript" src="./store1_market2.js"></script>
+<script type="text/javascript" src="./store4_market2_random.js"></script>
 <script type="text/javascript" src="./store2_market2.js"></script>
 <script type="text/javascript" src="./store4_market2.js"></script>
 </head>
