にっちくん修正

--- a/dev_market2.html
+++ b/dev_market2.html
@@ -19,6 +19,8 @@
     <script type="text/javascript" src="js/lib/underscore.js"></script>
     <script type="text/javascript" src="js/lib/obentomarket-core.js"></script>
 <script type="text/javascript" src="./store4_market2_random.js"></script>
+<script type="text/javascript" src="./store4_market2_random.js"></script>
+<script type="text/javascript" src="./store4_market2_random.js"></script>
 <script type="text/javascript" src="./store2_market2.js"></script>
 <script type="text/javascript" src="./store4_market2.js"></script>
 </head>
