--- a/dev_market2.html
+++ b/dev_market2.html
@@ -21,8 +21,8 @@
 <script type="text/javascript" src="./store4_market2_random.js"></script>
 <script type="text/javascript" src="./store4_market2_random.js"></script>
 <script type="text/javascript" src="./store4_market2_random.js"></script>
-<script type="text/javascript" src="./store2_market2.js"></script>
-<script type="text/javascript" src="./store4_market2.js"></script>
+<script type="text/javascript" src="./store4_market2_random.js"></script>
+<script type="text/javascript" src="./store5_market2.js"></script>
 </head>
 <body>
 
