--- a/dev_market2.html
+++ b/dev_market2.html
@@ -19,7 +19,7 @@
     <script type="text/javascript" src="js/lib/underscore.js"></script>
     <script type="text/javascript" src="js/lib/obentomarket-core.js"></script>
 <script type="text/javascript" src="./store5_market2.js"></script>
-<script type="text/javascript" src="./store5_market2-1.js"></script>
+<script type="text/javascript" src="./store4_market2_random.js"></script>
 <script type="text/javascript" src="./store4_market2_random.js"></script>
 <script type="text/javascript" src="./store4_market2_random.js"></script>
 <script type="text/javascript" src="./store4_market2_random.js"></script>
